--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -6,7 +6,7 @@
 <div ng-show="list.length" class="results-list">
    <div class="row">
       <div class="col-md-12" uib-tooltip="Number of intersecting or very near datasets to your area of interest.">
-         <h4 style="display:inline-block">Found {{products.length | number:0}} datasets</h4>
+         <h4 style="display:inline-block; padding-left:7px">Found {{products.length | number:0}} datasets</h4>
       </div>
    </div>
    <div class="panel panel-default" style="margin-bottom: 5px; margin-top: 0;">
