--- a/source/icsm/side-panel/side-panel-right.html
+++ b/source/icsm/side-panel/side-panel-right.html
@@ -2,22 +2,11 @@
     <a href="" title="Close panel" ng-click="closePanel()" style="z-index: 1">
         <span class="glyphicon glyphicon-chevron-right pull-left"></span>
     </a>
-    <div ng-show="right.active === 'search'" class="right-side-menu-container" style="z-index: 2">
-        <div class="panesTabContentSearch" elevation-search ></div>
-    </div>
-    <div ng-if="right.active === 'glossary'" class="right-side-menu-container">
-        <div class="panesTabContentItem" elevation-glossary></div>
-    </div>
-    <div ng-show="right.active === 'help'" class="right-side-menu-container">
-        <div class="panesTabContentItem" elevation-help></div>
-    </div>
 
+    <div class="right-side-menu-container" ng-show="right.active === 'downloader'" icsm-products></div>
+    <div class="right-side-menu-container" ng-show="right.active === 'download'" icsm-view></div>
+    <div class="right-side-menu-container" ng-show="right.active === 'maps'" icsm-maps></div>
+    <div class="right-side-menu-container" ng-show="right.active === 'glossary'" icsm-glossary></div>
+    <div class="right-side-menu-container" ng-show="right.active === 'help'" icsm-help></div>
     <panel-close-on-event only-on="search" event-name="clear.button.fired"></panel-close-on-event>
 </div>
-
-
-
-
-
-
-
