--- a/source/icsm/results/unreleased.html
+++ b/source/icsm/results/unreleased.html
@@ -1,7 +1,7 @@
 <div ng-repeat="(key, items) in types" ng-show="(items | countMatchedItems) != 0">
    <div style="padding-left:4px">
       <h5>
-         <span uib-tooltip="{{filter.types[key].description}}">{{key}} (Showing {{items | countMatchedItems | number:0}} of {{items.length}})</span>
+         <span uib-tooltip="{{filter.types[key].description}}">{{key}} (Showing {{items | countMatchedItems | number:0}} of {{items.length | number:0}})</span>
       </h5>
    </div>
    <div ng-repeat="item in items" icsm-abstract-hover item="item">
