--- a/source/icsm/products/projection.html
+++ b/source/icsm/products/projection.html
@@ -5,6 +5,6 @@
                </label>
    </div>
    <div class="col-md-8">
-      <select id="geoprocessOutCoordSys" style="width:95%" ng-model="processing.outCoordSys" ng-options="opt.value for opt in config.outCoordSys | productIntersect : processing.clip"></select>
+      <select id="geoprocessOutCoordSys" style="width:95%" ng-model="processing.outCoordSys" ng-options="opt.value for opt in config.outCoordSys | productIntersect : processing.clip track by opt.code"></select>
    </div>
 </div>
