--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -48,15 +48,21 @@
                            <span ng-show="list.childrenChecked(items)">Deselect all</span>
                         </button>
                         <span uib-tooltip="{{filter.types[key].description}}">{{key}} (Showing {{items | countMatchedItems | number:0}} of {{items.length | number:0}})</span>
+
+
                         <button class="pull-right undecorated" ng-click="expansions[available.source + '_' + key] = !expansions[available.source + '_' + key]">
-                           [{{expansions[available.source + '_' + key]?"collapse":"expand"}}]
+                           [{{expansions[available.source + '_' + key]?"hide files":"show files"}}]
                         </button>
                      </h5>
+                     <span ng-show="items | hasProducts" products-dialog>
+                        <product-projection processing="processing"></product-projection>
+                        <product-formats processing="processing"></product-formats>
+                     </span>
                   </div>
                   <div ng-show="expansions[available.source + '_' + key]">
                      <subtype items="items" mappings="mappings" show="show" hide="hide"></subtype>
                      <div style="text-align:right">
-                        <button class="undecorated" ng-click="visible = false">[collapse]</button>
+                        <button class="undecorated" ng-click="expansions[available.source + '_' + key] = false">[hide files]</button>
                      </div>
                   </div>
                </div>
