--- a/source/icsm/results/results.html
+++ b/source/icsm/results/results.html
@@ -51,7 +51,7 @@
 
 
                         <button class="pull-right undecorated" ng-click="expansions[available.source + '_' + key] = !expansions[available.source + '_' + key]">
-                           [{{expansions[available.source + '_' + key]?"hide files":"show files"}}]
+                           [{{expansions[available.source + '_' + key]?"hide ":"show "}}{{(items | hasProducts) ? 'products': 'files'}}]
                         </button>
                      </h5>
                      <span ng-show="items | hasProducts" products-dialog>
@@ -62,7 +62,7 @@
                   <div ng-show="expansions[available.source + '_' + key]">
                      <subtype items="items" mappings="mappings" show="show" hide="hide"></subtype>
                      <div style="text-align:right">
-                        <button class="undecorated" ng-click="expansions[available.source + '_' + key] = false">[hide files]</button>
+                        <button class="undecorated" ng-click="expansions[available.source + '_' + key] = false">[hide {{(items | hasProducts) ? 'products': 'files'}}]</button>
                      </div>
                   </div>
                </div>
