--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -4,10 +4,7 @@
            <ul class="left-toolbar-items"></ul>
            <ul class="right-toolbar-items">
                <li>
-                   <panel-trigger panel-id="download" panel-width="590px" name="Datasets Download" default="default" icon-class="fa-list" title="Select an area of interest and select datasets for download"></panel-trigger>
-               </li>
-               <li>
-                   <panel-trigger panel-id="downloader" panel-width="590px" name="Products Download" icon-class="fa-scissors" title="Select an area of interest and select products to clip and download to the area"></panel-trigger>
+                   <panel-trigger panel-id="download" panel-width="590px" name="Download" default="default" icon-class="fa-list" title="Select an area of interest and select datasets for download"></panel-trigger>
                </li>
                <li>
                  <panel-trigger panel-id="help" panel-width="590px" name="Help" icon-class="fa-question-circle-o" title="Show help"></panel-trigger>
