--- a/source/icsm/results/unreleased.html
+++ b/source/icsm/results/unreleased.html
@@ -1,44 +1,54 @@
 <div ng-repeat="(key, items) in types" ng-show="(items | countMatchedItems) != 0">
-   <div style="padding-left:4px">
+   <div style="padding-left:8px">
       <h5>
          <span uib-tooltip="{{filter.types[key].description}}">{{key}} (Showing {{items | countMatchedItems | number:0}} of {{items.length | number:0}})</span>
+
+         <button class="pull-right undecorated" ng-click="expansions['unreleased_' + items[0].source + '_' + key] = !expansions['unreleased_' + items[0].source + '_' + key]">
+            [{{expansions['unreleased_' + items[0].source + '_' + key]?"hide ":"show "}} list]
+         </button>
       </h5>
    </div>
-   <div ng-repeat="item in items" icsm-abstract-hover item="item">
-      <div tooltip-append-to-body="true" uib-tooltip-template="'icsm/results/abstracttooltip.html'" tooltip-popup-delay="400" data-ng-mouseenter="show(item)"
-         data-ng-mouseleave="hide(item)" style="padding-left:8px;">
-         <icsm-abstract item="item"></icsm-abstract>
-         <button type="button" class="undecorated" disabled="disabled" title="Licence details pending release.">
-            <i class="fa fa-lg fa-gavel"></i>
-         </button>
-         <span class="listItem" name="project_name" item="item" icsm-abstract-link></span>
-         <span ng-show="item.file_size" style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
+   <div ng-show="expansions['unreleased_' + items[0].source + '_' + key]">
+      <div ng-repeat="item in items | matchedItems" icsm-abstract-hover item="item">
+         <div tooltip-append-to-body="true" uib-tooltip-template="'icsm/results/abstracttooltip.html'" tooltip-popup-delay="400" data-ng-mouseenter="show(item)"
+            data-ng-mouseleave="hide(item)" style="padding-left:8px;">
+            <icsm-abstract item="item"></icsm-abstract>
+            <button type="button" class="undecorated" disabled="disabled" title="Licence details pending release.">
+               <i class="fa fa-lg fa-gavel"></i>
+            </button>
+            <span class="listItem" name="project_name" item="item" icsm-abstract-link></span>
+            <span ng-show="item.file_size" style="float:right;padding-top:3px">({{item.file_size | fileSize}})</span>
+         </div>
+         <div ng-show="item.showAbstract" class="well" style="margin-bottom:0px">
+            <span ng-show="!item.metadata">
+               <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
+               <span>Loading metadata...</span>
+            </span>
+            <div ng-show="item.metadata.abstract">
+               <strong>{{item.metadata.title}}</strong> -
+               <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span>
+            </div>
+            <div ng-show="!item.metadata.abstract">
+               <i class="fa fa-lg fa-exclamation-triangle" style="color:orange"></i>
+               There is no abstract available for this dataset.
+            </div>
+         </div>
+         <div style="padding-left:12px">
+            <div>
+               <strong style="width:7em">Captured: </strong>{{item.captured | captured}}
+            </div>
+            <div ng-if="item.available_date">
+               <strong style="width:7em">Available: </strong>{{item.available_date | reverseDate}}
+            </div>
+            <div>
+               <strong style="width:7em">Contact: </strong>
+               <a href="mailTo:{{item.contact}}">{{item.contact}}</a>
+            </div>
+         </div>
       </div>
-      <div ng-show="item.showAbstract" class="well" style="margin-bottom:0px">
-         <span ng-show="!item.metadata">
-            <i class="fa fa-spinner fa-spin fa-lg fa-fw"></i>
-            <span>Loading metadata...</span>
-         </span>
-         <div ng-show="item.metadata.abstract">
-            <strong>{{item.metadata.title}}</strong> -
-            <span class="icsm-abstract-body" ng-bind-html="item.metadata.abstractText"></span>
-         </div>
-         <div ng-show="!item.metadata.abstract">
-            <i class="fa fa-lg fa-exclamation-triangle" style="color:orange"></i>
-            There is no abstract available for this dataset.
-         </div>
-      </div>
-      <div style="padding-left:12px">
-         <div>
-            <strong style="width:7em">Captured: </strong>{{item.captured | captured}}
-         </div>
-         <div ng-if="item.available_date">
-            <strong style="width:7em">Available: </strong>{{item.available_date | reverseDate}}
-         </div>
-         <div>
-            <strong style="width:7em">Contact: </strong>
-            <a href="mailTo:{{item.contact}}">{{item.contact}}</a>
-         </div>
+
+      <div style="text-align:right">
+         <button class="undecorated" ng-click="expansions['unreleased_' + items[0].source + '_' + key] = false">[hide list]</button>
       </div>
    </div>
 </div>
