--- a/source/icsm/results/continue.html
+++ b/source/icsm/results/continue.html
@@ -1,4 +1,5 @@
 <div class="continue-container" ng-show="ctrl.selected.length">
-   <button class="btn btn-primary" ng-click="ctrl.review()">Download {{ctrl.selected.length | number}} selected datasets... (Approx: {{ctrl.selectedSize | fileSize}})</button>
+   <div class="warn-limit alert-danger" ng-show="ctrl.selectedSize > limit">There is a {{limit | fileSize}} limit per request. Remove some selections.</div>
+   <button ng-disabled="ctrl.selectedSize > limit" class="btn btn-primary" ng-click="ctrl.review()">Download {{ctrl.selected.length | number}} selected datasets... (Approx: {{ctrl.selectedSize | fileSize}})</button>
 </div>
 
