First draft at swapping to placenames search

--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -3,15 +3,7 @@
       <div>
          <ul class="left-toolbar-items">
             <div class="btn-group searchBar" ng-show="root.whichSearch != 'region'">
-               <div class="input-group input-group-custom" geo-search >
-                  <input type="text" ng-autocomplete ng-model="values.from.description" options='{country:"au"}' size="32" title="Select a locality to pan the map to."
-                     class="form-control" aria-label="...">
-                  <div class="input-group-btn">
-                     <button ng-click="zoom(false)" exp-ga="['send', 'event', 'icsm', 'click', 'zoom to location']" class="btn btn-default" title="Pan and potentially zoom to location.">
-                        <i class="fa fa-search"></i>
-                     </button>
-                  </div>
-               </div>
+               <div class="placenames-quicksearch" placenames-quicksearch></div>
             </div>
          </ul>
          <ul class="right-toolbar-items">
