--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -2,9 +2,7 @@
    <div class="toolBarContainer">
       <div>
          <ul class="left-toolbar-items">
-            <div class="btn-group searchBar" ng-show="root.whichSearch != 'region'">
-               <div class="placenames-quicksearch" placenames-quicksearch></div>
-            </div>
+            <div class="quickSearch" placenames-quick-search></div>
          </ul>
          <ul class="right-toolbar-items">
             <li>
