Add manual area definition

--- a/source/icsm/clip/clip.html
+++ b/source/icsm/clip/clip.html
@@ -1,25 +1,30 @@
-<div class="well well-sm" style="margin-bottom:5px">
+<div class="well well-sm">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-12" style="padding:0">
-				<div class="" role="group" aria-label="...">
-					<button ng-click="initiateDraw()" ng-disable="client.drawing"
-                      tooltip-append-to-body="true" tooltip-placement="bottom" uib-tooltip="Enable drawing of a bounding box. On enabling, click on the map and drag diagonally"
-						class="btn btn-primary btn-default">Select an area...</button>
-					<button ng-click="showInfo = !showInfo" tooltip-placement="bottom" uib-tooltip="Information." style="float:right" class="btn btn-primary btn-default"><i class="fa fa-info"></i></button>
-				</div>
-				<exp-info title="Selecting an area" show-close="true" style="width:450px;position:fixed;top:200px;right:40px" is-open="showInfo">
-					<icsm-info-bbox></icsm-info-bbox>
-            </exp-info>
-            <div class="row" ng-hide="(!clip.xMin && clip.xMin !== 0) || oversize" style="padding-top:7px;">
-               <div class="col-md-12 ng-binding">
-                  Selected bounds: {{clip.xMin | number : 4}}° west,
-                     {{clip.yMax | number : 4}}° north,
-                     {{clip.xMax | number : 4}}° east,
-                     {{clip.yMin | number : 4}}° south
-               </div>
-            </div>
+			<div class="col-md-10">
+				<strong style="font-size:120%">Select area:</strong>
+				<button ng-click="initiateDraw()" ng-disable="client.drawing" tooltip-placement="right" uib-tooltip="Enable drawing of a bounding box. On enabling, click on the map and drag diagonally"
+					class="btn btn-primary btn-default">Draw...</button>
+				<button ng-click="typing = !typing"  tooltip-placement="right" uib-tooltip="Type coordinates of a bounding box. Restricted to maximum of 2.25 square degrees."
+					class="btn btn-primary btn-default">Manual entry...</button>
 			</div>
+			<div class="col-md-2">
+				<button style="float:right" ng-click="showInfo = !showInfo" tooltip-placement="left" uib-tooltip="Information." class="btn btn-primary btn-default"><i class="fa fa-info"></i></button>
+				<exp-info title="Selecting an area" show-close="true" style="width:450px;position:fixed;top:230px;right:40px" is-open="showInfo">
+					<icsm-info-bbox>
+			</div>
+			</exp-info>
 		</div>
-	</div>
+   </div>
+   <div class="row" ng-hide="typing || (!clip.xMin && clip.xMin !== 0) || oversize" style="padding-top:7px;">
+      <div class="col-md-12 ng-binding">Selected bounds:
+               {{clip.xMin | number : 4}}° west,
+               {{clip.yMax | number : 4}}° north,
+               {{clip.xMax | number : 4}}° east,
+               {{clip.yMin | number : 4}}° south
+      </div>
+  </div>
+  <clip-modal title="Define search area" show-close="true" style="width:480px;position:fixed;top:110px;right:80px" is-open="typing">
+      <icsm-manual-clip></icsm-manual-clip>
+   </clip-modal>
 </div>
