Update to allow layer switching on data coverage types

--- a/source/icsm/toolbar/toolbar.html
+++ b/source/icsm/toolbar/toolbar.html
@@ -2,9 +2,12 @@
    <div class="toolBarContainer">
       <div>
          <ul class="left-toolbar-items">
-            <div class="quickSearch" placenames-quick-search></div>
+            <li>
+               <span style="display:inline-block"  placenames-quick-search>g</span>
+            </li>
          </ul>
          <ul class="right-toolbar-items">
+            <li coverage-toggle></li>
             <li>
                <panel-trigger panel-id="download" panel-width="590px" name="Download" default="default" icon-class="fa-list" title="Select an area of interest and select datasets for download"></panel-trigger>
             </li>
