Change GA strategy to handle metadata_url and add close link on layer switcher

--- a/source/icsm/results/subtype.html
+++ b/source/icsm/results/subtype.html
@@ -25,7 +25,7 @@
          </div>
          <div ng-show="!item.metadata.abstract">
             <i class="fa fa-lg fa-exclamation-triangle" style="color:orange"></i>
-            There is no abstract available for this dataset.
+            Can't show abstract for this dataset.
          </div>
       </div>
    </div>
