Detect out of bounds errors for point elevation

--- a/source/icsm/point/point.html
+++ b/source/icsm/point/point.html
@@ -10,7 +10,8 @@
       <div>
          <div class="title">Longitude:</div>{{longitude | number : 5}}&deg;
       </div>
-      <div ng-hide="elevation && elevation !== 0">Looking up elevation...</div>
+      <div ng-hide="(elevation && elevation !== 0) || error">Looking up elevation...</div>
+      <div ng-show="error">{{error}}</div>
       <div ng-show="elevation || elevation === 0">
          <div class="title">Elevation:</div>{{elevation | number : 2}}m
       </div>
