--- a/source/icsm/imagery/launch.html
+++ b/source/icsm/imagery/launch.html
@@ -1,3 +1,3 @@
-<button type="button" class="undecorated" title="View preview of imagery" ng-click="preview()">
+<button type="button" class="undecorated" title="View preview of imagery" ng-click="preview()" ng-if="show">
 	<i class="fa fa-lg fa-eye"></i>
 </button>
