Add logo to elevation header

--- a/source/icsm/header/header.html
+++ b/source/icsm/header/header.html
@@ -1,35 +1,45 @@
 <div class="container-full common-header" style="padding-right:10px; padding-left:10px">
-    <div class="navbar-collapse collapse ga-header-collapse">
-        <ul class="nav navbar-nav">
-            <li class="hidden-xs"><a href="/"><h1 class="applicationTitle">{{heading}}</h1></a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right nav-icons">
-        	<li role="menuitem" style="padding-right:10px;position: relative;top: -3px;">
-              <span class="altthemes-container">
-	               <span>
-                     <a title="Location INformation Knowledge platform (LINK)" href="http://fsdf.org.au/" target="_blank">
-                        <img alt="FSDF" src="icsm/resources/img/FSDFimagev4.0.png" style="height: 66px">
-                     </a>
-                  </span>
+   <div class="navbar-collapse collapse ga-header-collapse">
+      <ul class="nav navbar-nav">
+         <li class="hidden-xs">
+            <a href="https://www.icsm.gov.au/" target="_blank" class="icsm-logo"
+               style="margin-top: -4px;display:inline-block;">
+               <img alt="ICSM - ANZLIC Committee on Surveying &amp; Mapping" class="header-logo"
+                  src="icsm/resources/img/icsm-logo-sml.gif">
+            </a>
+            <a href="/">
+               <h1 class="applicationTitle">{{heading}}</h1>
+            </a>
+         </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right nav-icons">
+         <li role="menuitem" style="padding-right:10px;position: relative;top: -3px;">
+            <span class="altthemes-container">
+               <span>
+                  <a title="Location INformation Knowledge platform (LINK)" href="http://fsdf.org.au/" target="_blank">
+                     <img alt="FSDF" src="icsm/resources/img/FSDFimagev4.0.png" style="height: 66px">
+                  </a>
                </span>
-           </li>
-        	<li common-navigation role="menuitem" current="current" style="padding-right:10px"></li>
-			<li mars-version-display role="menuitem"></li>
-			<li style="width:10px"></li>
-        </ul>
-    </div><!--/.nav-collapse -->
+            </span>
+         </li>
+         <li common-navigation role="menuitem" current="current" style="padding-right:10px"></li>
+         <li mars-version-display role="menuitem"></li>
+         <li style="width:10px"></li>
+      </ul>
+   </div>
+   <!--/.nav-collapse -->
 </div>
 <div class="contributorsLink" style="position: absolute; right:7px; bottom:15px">
-      <icsm-contributors-link></icsm-contributors-link>
+   <icsm-contributors-link></icsm-contributors-link>
 </div>
 <!-- Strap -->
 <div class="row">
-    <div class="col-md-12">
-        <div class="strap-blue">
-        </div>
-        <div class="strap-white">
-        </div>
-        <div class="strap-red">
-        </div>
-    </div>
+   <div class="col-md-12">
+      <div class="strap-blue">
+      </div>
+      <div class="strap-white">
+      </div>
+      <div class="strap-red">
+      </div>
+   </div>
 </div>
